# Hough-Art

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt
include/: Arguments.h  Channel.h  CudaChannel.h  CudaCommon.h  FileIO.h  HoughTransform.h  Image.h
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: Channel.cpp  CudaChannel.cu  CudaHoughTransform.cu  HoughTransform.cpp  Image.cpp  main.cpp  main.cpp~
